# Swish

./: .gitignore  Cargo.toml  README.md  bot.py  build.py  client.py  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  swish.toml
.github/workflows/: build.yml  release.yml  verify-types.yml
docs/: readme.md
docs/rest/: search.md
docs/websocket/: payloads.md  protocol.md
native/: setup.py
native/src/: lib.rs  player.rs
native_voice/: pyproject.toml  setup.py
native_voice/src/: lib.rs  protocol.rs
src/: __init__.py  app.py  config.py  ip_rotator.py  logging.py  main.rs  player.py  rotator.py  search.py  server.py  test.py  utils.py
src/utils/: configreader.rs  mod.rs
swish/: __init__.py  app.py  config.py  ip_rotator.py  logging.py  player.py  rotator.py  search.py  utilities.py
swish/types/: payloads.py
tests/: bot.py  client.py
