[package]
name = "swish"
version = "0.1.0"
edition = "2021"
description = "A standalone audio node to interact with discord"
repository = "https://github.com/PythonistaGuild/Swish"
license = "AGPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "~4"
actix-web-actors = "~4"
symphonia = "~0.5"
toml = "~0.7"
serde = {version = "~1", features = ["derive"]}