[tool.poetry]
name        = "Swish"
version     = "0.0.1a"
description = ""    # Fill in later
license     = ""    # Fill in later
authors     = []    # Fill in later
readme      = ""    # Fill in later


[tool.poetry.dependencies]
python  = "^3.10.0"

aiohttp                     = "^3.7.0"
yt-dlp                      = "^2022.2.0"
toml                        = "^0.10.0"
colorama                    = "^0.4.0"
"discord.py"                = { git = "git@github.com:Rapptz/discord.py",                branch = "master" }
"discord-ext-native-voice"  = {  }


[tool.poetry.dev-dependencies]
jishaku = "*"
pyinstaller = "*"


[tool.pyright]
include                 = ["swish"]
exclude                 = []
verboseOutput           = false
pythonVersion           = "3.10"
typeCheckingMode        = "strict"
useLibraryCodeForTypes  = true

reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnknownMemberType = false
reportFunctionMemberAccess = false
reportUnknownArgumentType = false
reportImportCycles = false
reportConstantRedefinition = false
