[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name        = "Swish"
version     = "0.0.1a"
description = ""
license     = ""
authors     = []
readme      = ""


[tool.poetry.dependencies]
python          = "^3.10.0"
aiohttp         = "^3.7.0"
colorama        = "^0.4.0"
toml            = "^0.10.0"
yt-dlp          = "^2022.2.0"
"discord.py"    = { git = "git@github.com:Rapptz/discord.py", branch = "master" }


[tool.poetry.dev-dependencies]
pyinstaller = { version = "*" }
jishaku     = { version = "*" }


[tool.pyright]
include                 = ["swish"]
exclude                 = []
verboseOutput           = false
pythonVersion           = "3.10"
typeCheckingMode        = "strict"
useLibraryCodeForTypes  = true

reportMissingTypeStubs      = false
reportPrivateImportUsage    = false
reportPrivateUsage          = false
reportUnknownMemberType     = false
reportFunctionMemberAccess  = false
reportUnknownArgumentType   = false
reportImportCycles          = false
reportConstantRedefinition  = false
