[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'


[tool.poetry]
name = 'Swish'
version = '0.0.1'
description = ''
authors = []


[tool.poetry.dependencies]
python              = '^3.10'
aiohttp             = '~3.8.0'
colorama            = '~0.4.0'
toml                = '~0.10.0'
typing_extensions   = '~4.3.0'
yt-dlp              = '~2022.7.0'
dacite              = '~1.6.0'
'discord.py'        = { git = 'https://github.com/Rapptz/discord.py' }

# 'build' extras
pyinstaller         = { version = '*', optional = true }

# 'dev' extras
jishaku             = { version = '*', optional = true }


[tool.poetry.extras]
build = ['pyinstaller']
dev = ['jishaku']


[tool.pyright]
include = ['swish']
pythonVersion = '3.10'
typeCheckingMode = 'strict'
useLibraryCodeForTypes = true

reportUnknownMemberType = false
reportPrivateUsage = false
reportImportCycles = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportConstantRedefinition = false
reportPrivateImportUsage = false
